style: missing files

--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -1,6 +1,14 @@
+/* **************************************************************************
+   APP > INITIALIZE TAILWIND
+   ************************************************************************** */
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+/* **************************************************************************
+   APP > LAYOUT CONFIGURATION
+   ************************************************************************** */
 
 @layer base {
   html {
